[package]
name = "onc-rpc"
description = "Remote Procedure Calls using the ONC-RPC standard"
version = "0.1.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]
homepage = "https://github.com/jvff/onc-rpc"
readme = "README.md"
license = "GPL-3.0"
keywords = ["rpc", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
byteorder = "1.1"
bytes = "0.4"
error-chain = "0.11"
futures = "0.1"
serde = "1.0"
serde_bytes = "0.10"
serde_derive = "1.0"
serde-xdr = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = { git = "https://github.com/jvff/tokio-proto.git", branch = "generic_error" }
tokio-service ="0.1"
